# qstream-python

./: .gitignore  AGENTS.md  LICENSE  README.md  codecov.yml  example.py  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/plans/: 2025-10-25-qstream-library-design.md
src/qstream/: __init__.py  client.py  exceptions.py  models.py  parser.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_integration.py  test_models.py  test_parser.py
