[project]
name = "qstream"
version = "0.1.0"
description = "Async Python library for BUVO QStream 2.0 ventilation fan control"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bram Duvigneau", email = "bram@bramd.nl" }
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-aiohttp>=1.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
